Atualização da configuração

--- a/app-react/package.json
+++ b/app-react/package.json
@@ -2,7 +2,7 @@
   "name": "users-creu",
   "version": "0.1.0",
   "private": true,
-  "author": "Jonas",
+  "author": "William Mendonça",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.4.0",
