--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js"
   },
-  "author": "Jonas",
+  "author": "William Mendonça",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
